--- a/index.html
+++ b/index.html
@@ -47,12 +47,29 @@
 <ul class="container-b">
         <li class="item-c"><iframe width="560" height="300" src="https://www.youtube.com/embed/dH4G2fpRwiE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
         <li class="item-d"> <h3><i><ins> Mockumentary // Flingue et bigoudi</i>  (année)</ins></h4>  <p>Du texte <br> Encore du texte</p></li>
+
         <li class="item-c"><iframe width="560" height="300" src="https://www.youtube.com/embed/Fna2SDBOQEs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
         <li class="item-d"><h3><i><ins> Titre</i>  (année)</ins></h4>  <p>Du textextextextextextextextextextext <br> Encore du textextextextextextextextextextext</p></li>
+            
         <li class="item-c"><iframe width="560" height="300" src="https://www.youtube.com/embed/f1YM-Jz0nWI?list=PLbQvok6c8_srgmEquVxqeyk7P5sTvfpSl" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-        <li class="item-d"><h3><i><ins> Titre</i>  (année)</ins></h4>  <p>Du textextextextextextextextextextext <br> Encore du textextextextextextextextextextext</p></li>
+        <li class="item-d"><h3><i><ins> Pour le titre on verra plus tard</i>  (année)</ins></h4>  
+            <p>Vidéo / Poésie / Documentaire Expérimental 
+            <br><br>Protocole : 3 écrivains, 3 machines à écrire, 1 caméra volante
+            <br>Les écrivains doivent changer de machine à chaque retour à la ligne. 
+            <br> Les écrits en résultant sont découpés ligne par ligne et redisposés aléatoirement 
+            <br> selon la méthode du Cut-Up (Nom Référence). 
+            <br> Le montage, après avoir subit un découpage arbitraire subit le même traitement que les textes.
+            <br> L'intégralité de la matière doit être présente à l'image. 
+            <br><br> Postes Occupés : poésie / cadre / montage</p>
+        </li>
+
         <li class="item-c"><iframe width="560" height="300" src="https://www.youtube.com/embed/Dtxva0SlhuI?list=PLbQvok6c8_srgmEquVxqeyk7P5sTvfpSl" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-        <li class="item-d"><h3><i><ins> Titre</i>  (année)</ins></h4>  <p>Du textextextextextextextextextextext <br> Encore du textextextextextextextextextextext</p></li>
+        <li class="item-d"><h3><i><ins> Pour le titre on verra plus tard 2</i>  (année)</ins></h4>  
+            <p>Ce deuxième volet de la trilogie se présente avec un protocole expérimental  légèrement différent. 
+            <br> Cette fois, le mouvement est déterminé par la taille des feuilles (format Post-it), les trois écrivains sont contraints à changer de machine quand l'un d'entre eux est arrivé au bout de sa page. La caméra est fixe. 
+            <br> Les pages sont récoltées et mélangées pour former un livre au récit aléatoire. 
+            <br><br> Poste Occupé : poésie / cadre / montage</p>
+        </li>
 </ul>
 
 
@@ -75,9 +92,19 @@
 </header>
 <ul class="container-b">
         <li class="item-c"><iframe width="560" height="300" src="https://www.youtube.com/embed/bSi404Ce-UE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-        <li class="item-d"><h3><i><ins> Titre</i>  (année)</ins></h4>  <p>Du textextextextextextextextextextext <br> Encore du textextextextextextextextextextext</p></li>
+        <li class="item-d"><h3><i><ins> L'ami</i>  (année)</ins></h4>  
+            <p>Tout premier court-métrage, réalisé pour mon bac en 2015. 
+                <br>Sa réalisation a été difficile, l'inévitable sans doute pour une première expérience. 
+                <br>Au delà du récit, le film narre aussi sa fabrication au parcours accidenté et thérapeutique, 
+                <br>ainsi que ma tentative de rendre hommage au cinéma de Georges Méliès par quelques effets spéciaux 
+                <br>volontairement rudimentaires. <br><br>Un remontage est actuellement en préparation. 
+                <br><br>Poste Occupé : scénario / réalisation / cadre / prise de son / montage </p></li>
+
         <li class="item-c"><iframe width="560" height="300" src="https://www.youtube.com/embed/ECLqrVdqiBo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-        <li class="item-d"><h3><i><ins> Titre</i>  (année)</ins></h4>  <p>Du textextextextextextextextextextext <br> Encore du textextextextextextextextextextext</p></li>
+        <li class="item-d"><h3><i><ins> Mission Athéna 12</i>  (année)</ins></h4>  
+            <p>Second court-métrage, à visée documentaire cette fois, son idée a fleurit elle aussi courant 2015 et il est devenu le deuxième objet filmique que j'ai présenté pour mon bac. Il témoigne de mon attachement à la culture pop' japonaise et occidentale à travers une déambulation en conventions de Japanimation et quelques interviews. Il signe aussi la fin de mon court intérêt pour l'utilisation de la Go-Pro … 
+            <br><br> Poste Occupé : scénario / réalisation / cadre / prise de son / montage</p>
+        </li>
     </ul>
 
 
