--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     JULIE CHENAL
 </header>
 
-<ul class="front-cnt"><iframe width="100%" height="700" src="https://www.youtube.com/embed/Vi-AKBAcr3E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<ul class="front-cnt">
+    <iframe width="100%" height="700" src="https://www.youtube.com/embed/Vi-AKBAcr3E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </ul>
 
 <header class="div">
@@ -121,7 +122,7 @@
     LYCEE
 </header>
 <ul class="container-b">
-        <li class="item-c"><iframe width="560" height="300" src="https://drive.google.com/open?id=1Cb7drd7BHloVEX9yQgVbZCzQUxXNU2-S" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+        <li class="item-c"></li>
         <li class="item-d"><h3><i><ins> L'ami</i>  (année)</ins></h4>  
             <p>Tout premier court-métrage, réalisé pour mon bac en 2015. 
                 <br>Sa réalisation a été difficile, l'inévitable sans doute pour une première expérience. 
@@ -142,14 +143,14 @@
     GIFS
 </header>
 <ul class="container">
-    <li class="gif"><img src="matière/gifs/Sblarpsor.gif" style="width:300px; height:300px; border-radius:30px;"></li>
-    <li class="gif"><img src="matière/gifs/100_0191.gif" style="width:300px; height:300px; border-radius:30px;"></li>
-    <li class="gif"><img src="matière/gifs/Tuca.gif" style="width:300px; height:300px; border-radius:30px;"></li>
-    <li class="gif"><img src="matière/gifs/Larvumilié.GIF" style="width:300px; height:300px; border-radius:30px;"></li>
-    <li class="gif"><img src="matière/gifs/HAPPY NEW WITCH.gif" style="width:300px; height:300px; border-radius:30px;"></li>
-    <li class="gif"><img src="matière/gifs/Wiggle 01.gif" style="width:300px; height:300px; border-radius:30px;"></li>
-    <li class="gif"><img src="matière/gifs/Tuca2.gif" style="width:300px; height:300px; border-radius:30px;"></li>
-    <li class="gif"><img src="matière/gifs/Les Patients.gif" style="width:300px; height:300px; border-radius:30px;"></li>
+    <li class="gif"><img src="https://res.cloudinary.com/dc2cywkwf/image/upload/v1552297011/GIFs/Sblarpsor.gif" style="width:300px; height:300px; border-radius:30px;"></li>
+    <li class="gif"><img src="https://res.cloudinary.com/dc2cywkwf/image/upload/v1552297012/GIFs/100_0191.gif" style="width:300px; height:300px; border-radius:30px;"></li>
+    <li class="gif"><img src="https://res.cloudinary.com/dc2cywkwf/image/upload/v1552297003/GIFs/Tuca.gif" style="width:300px; height:300px; border-radius:30px;"></li>
+    <li class="gif"><img src="https://res.cloudinary.com/dc2cywkwf/image/upload/v1552297029/GIFs/Larvumili.gif" style="width:300px; height:300px; border-radius:30px;"></li>
+    <li class="gif"><img src="https://res.cloudinary.com/dc2cywkwf/image/upload/v1552297033/GIFs/HAPPY_NEW_WITCH.gif" style="width:300px; height:300px; border-radius:30px;"></li>
+    <li class="gif"><img src="https://res.cloudinary.com/dc2cywkwf/image/upload/v1552297014/GIFs/Wiggle_01.gif" style="width:300px; height:300px; border-radius:30px;"></li>
+    <li class="gif"><img src="https://res.cloudinary.com/dc2cywkwf/image/upload/v1552297003/GIFs/Tuca2.gif" style="width:300px; height:300px; border-radius:30px;"></li>
+    <li class="gif"><img src="https://res.cloudinary.com/dc2cywkwf/image/upload/v1552297030/GIFs/Les_Patients.gif" style="width:300px; height:300px; border-radius:30px;"></li>
 </ul>
 
 
