--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
     <title>0010</title>
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        .mySlides {display:none;}
-    </style>
 </head>
 
 <header>
     <nav>
         <ul class ="nav">
-            <li><a href="index.html"> Index</a></li>
+            <a href="index.html"><li> Index</li></a>
             <li class="logo">Logo</li>
-            <li><a href="poésie.html">Poésie</a></li>
+            <a href="poésie.html"><li>Poésie</li></a>
         </ul>
     </nav>
 </header>
