--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 <ul class="container">
     <li class="item-a">
     <iframe width="560" height="300" src="https://www.youtube.com/embed/Brukm23Lrlc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-    <li class="item-b"><h3><i><ins> Titre</i>  (année)</ins></h4>  <p>Du textextextextextextextextextextext <br> Encore du textextextextextextextextextextext</p></li>
+    <li class="item-b"><h3><i><ins> Sblarp</i>  (2018)</ins></h4>  <p>Du textextextextextextextextextextext <br> Encore du textextextextextextextextextextext</p></li>
 
     <li class="item-a"><iframe width="560" height="300" src="https://www.youtube.com/embed/Rg0NIQ0R-m0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-    <li class="item-b"><h3><i><ins> Titre</i>  (année)</ins></h4>  <p>Du textextextextextextextextextextext <br> Encore du textextextextextextextextextextext</p></li>
+    <li class="item-b"><h3><i><ins> Protopopée</i>  (2019)</ins></h4>  <p>Du textextextextextextextextextextext <br> Encore du textextextextextextextextextextext</p></li>
 
     <li class="item-a"><iframe width="560" height="300" src="https://www.youtube.com/embed/Vi-AKBAcr3E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-    <li class="item-b"><h3><i><ins> Titre</i>  (année)</ins></h4>  <p>Du textextextextextextextextextextext <br> Encore du textextextextextextextextextextext</p></li>
+    <li class="item-b"><h3><i><ins> Triangle-Girl</i>  (2019)</ins></h4>  <p>Du textextextextextextextextextextext <br> Encore du textextextextextextextextextextext</p></li>
 </ul>
 
 
@@ -54,7 +54,7 @@
         <br><br>Poste occupés : scénario / réalisation / prise de son</p></li>
 
         <li class="item-c"><iframe width="560" height="300" src="https://www.youtube.com/embed/Fna2SDBOQEs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-        <li class="item-d"><h3><i><ins> 0001 - 1413</i>  (année)</ins></h4>  <p>Vidéo à caractère expérimental. 
+        <li class="item-d"><h3><i><ins> 0001 - 1413</i>  (2017)</ins></h4>  <p>Vidéo à caractère expérimental. 
         <br><br> Postes occupés : réalisation / cadrage / montage / musique</p></li>
 
         <li class="item-c"><iframe width="560" height="300" src="https://www.youtube.com/embed/nhnxBKr0zds" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
@@ -120,16 +120,19 @@
 </header>
 <ul class="container-b">
         <li class="item-c"></li>
-        <li class="item-d"><h3><i><ins> L'ami</i>  (année)</ins></h4>  
-            <p>Tout premier court-métrage, réalisé pour mon bac en 2015. 
+        <li class="item-d"><h3><i><ins> L'ami</i>  (2015)</ins></h4>  
+            <p> 
+                Tout premier court-métrage, réalisé pour mon bac en 2015. 
                 <br>Sa réalisation a été difficile, l'inévitable sans doute pour une première expérience. 
                 <br>Au delà du récit, le film narre aussi sa fabrication au parcours accidenté et thérapeutique, 
                 <br>ainsi que ma tentative de rendre hommage au cinéma de Georges Méliès par quelques effets spéciaux 
-                <br>volontairement rudimentaires. <br><br>Un remontage est actuellement en préparation. 
+                <br>volontairement rudimentaires. <br><br> 
+                Malheureusement, L'Ami ne peut être hébergé sur aucune plateforme pour des raisons de droits d'auteurs. 
+                <br>Un remontage est actuellement en préparation. Contactez-moi par mail si vous souhaitez le visionner, un transfert est envisageable.
         <br><br>Postes occupés : scénario / réalisation / cadre / prise de son / montage </p></li>
 
         <li class="item-c"><iframe width="560" height="300" src="https://www.youtube.com/embed/ECLqrVdqiBo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-        <li class="item-d"><h3><i><ins> Mission Athéna 12</i>  (année)</ins></h4>  
+        <li class="item-d"><h3><i><ins> Mission Athéna 12</i>  (2015)</ins></h4>  
             <p>Second court-métrage, à visée documentaire cette fois, son idée a fleurit elle aussi courant 2015 et il est devenu le deuxième objet filmique que j'ai présenté pour mon bac. Il témoigne de mon attachement à la culture pop' japonaise et occidentale à travers une déambulation en conventions de Japanimation et quelques interviews. Il signe aussi la fin de mon court intérêt pour l'utilisation de la Go-Pro … 
             <br><br> Postes occupés : scénario / réalisation / cadre / prise de son / montage</p>
         </li>
@@ -151,7 +154,7 @@
 </ul>
 
 
-<footer>- julie.chenal@ntymail.com -</footer>
+<footer>- julie.chenal@ntymail.com - </footer>
 
 
 </body>
