--- a/poésie.html
+++ b/poésie.html
@@ -23,7 +23,7 @@
 <body>
     
     <header class="me">
-        GALERIE PHOTOS
+        GALERIE
     </header>
     <div class="w3-content w3-display-container">
  
@@ -83,6 +83,10 @@
         <img src="https://res.cloudinary.com/dc2cywkwf/image/upload/v1552297590/Photos/p9.jpg" style="width:100%; height:100%;">
         </div>
 
+        <div class="w3-display-container mySlides">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/lAOWhuhSE8A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
         <button class="bl" onclick="plusDivs(-1)">&#10094;</button>
         <button class="br" onclick="plusDivs(1)">&#10095;</button>
         
@@ -115,7 +119,7 @@
 
 <ul class="container-c">
     <a href="cvv.html"><li class="item-e">Amiral <br> Cul-Vers-Ville</li></a>
-    <li class="item-e">Avignon</li>
+    <a href="avi.html"><li class="item-e">Avignon</li></a>
     <a href="pnpp.html"><li class="item-e">Les pauvres <br> ne peuvent pas</li></a>
 </ul>
 
