--- a/avi.html
+++ b/avi.html
@@ -40,7 +40,7 @@
 
 </pre>
 
-<a href="poésie.html"><button>Retour</button></a>
+<a href="poesie.html"><button>Retour</button></a>
 </body>
 
 </html>
