--- a/cvv.html
+++ b/cvv.html
@@ -8,8 +8,8 @@
 
 <body>
     <img src="matière/Textes/AmiralCVV.PNG">
-    
-    <a href="poésie.html"><button>Retour</button></a>
+
+    <a href="poesie.html"><button>Retour</button></a>
 </body>
 
 </html>
