--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul class ="nav">
             <a href="index.html"><li> Index</li></a>
             <li class="logo">Logo</li>
-            <a href="poésie.html"><li>Poésie</li></a>
+            <a href="poesie.html"><li>Poésie</li></a>
         </ul>
     </nav>
 </header>
@@ -40,7 +40,6 @@
     <li class="item-a"><iframe width="560" height="300" src="https://www.youtube.com/embed/Vi-AKBAcr3E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
     <li class="item-b"><h3><i><ins> Triangle-Girl</i>  (2019)</ins></h4>  <p>Du textextextextextextextextextextext <br> Encore du textextextextextextextextextextext</p></li>
 </ul>
-
 
 
 <header class="div">
