--- a/pnpp.html
+++ b/pnpp.html
@@ -50,7 +50,7 @@
         Comme la métaphore s’effrite. 
     </pre>
 
-<a href="poésie.html"><button>Retour</button></a>
+<a href="poesie.html"><button>Retour</button></a>
 
 </body>
 </html>
