--- a/index.html
+++ b/index.html
@@ -32,13 +32,22 @@
 <ul class="container">
     <li class="item-a">
     <iframe width="560" height="300" src="https://www.youtube.com/embed/Brukm23Lrlc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-    <li class="item-b"><h3><i><ins> Sblarp</i>  (2018)</ins></h4>  <p>Du textextextextextextextextextextext <br> Encore du textextextextextextextextextextext</p></li>
+    <li class="item-b"> <h3><i><ins> Sblarp</i>  (2018)</ins></h4>  
+            <p>Sblarp est un court-métrage d'animation expérimentale, réalisé dans le cadre d'un TD d'Animation à l'UPJV. 
+            <br> J'ai exploré différentes techniques de dégration du film sur pellicule 16mm, qui m'ont finalement mennées à créer un bruit d'image de plus en plus opaque.  Faute de moyen pour numériser correctement la pellicule, 
+            <br> j'ai fait une captation de la projection du film afin de pouvoir y ajouter une bande sonore, elle aussi composée de bruits. 
+            <br><br> Postes occupés : expérimentation / réalisation / montage / bruitage</p></li>
 
     <li class="item-a"><iframe width="560" height="300" src="https://www.youtube.com/embed/Rg0NIQ0R-m0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-    <li class="item-b"><h3><i><ins> Protopopée</i>  (2019)</ins></h4>  <p>Du textextextextextextextextextextext <br> Encore du textextextextextextextextextextext</p></li>
+    <li class="item-b"><h3><i><ins> Protopopée</i>  (2019)</ins></h4> 
+        <p>J'ai réalisé ce prototype pour un projet de film d'animation, dont le récit sera définit par des sons directs,  tirés de vidéos documentaires. 
+        <br><br>Postes occupés : design (trait) / animation / montage </p></li>
 
     <li class="item-a"><iframe width="560" height="300" src="https://www.youtube.com/embed/Vi-AKBAcr3E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-    <li class="item-b"><h3><i><ins> Triangle-Girl</i>  (2019)</ins></h4>  <p>Du textextextextextextextextextextext <br> Encore du textextextextextextextextextextext</p></li>
+    <li class="item-b"><h3><i><ins> Triangle-Girl</i>  (2019)</ins></h4>  
+        <p>Premier projet mettant en scène mon personnage Triangle-Girl, ce work-in-progress fera l'objet d'un teaser pour une série animée.     
+        <br> Restent à faire : titrages, étalonnage, musique, doublage, mixage. 
+        <br><br>Postes occupés : écriture / design / animation / bruitages</p></li>
 </ul>
 
 
@@ -47,8 +56,9 @@
 </header>
 <ul class="container-b">
         <li class="item-c"><iframe width="560" height="300" src="https://www.youtube.com/embed/dH4G2fpRwiE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-        <li class="item-d"> <h3><i><ins> Mockumentary // Flingue et bigoudi</i>  (2018 - 2019)</ins></h4>  <p>Exercice de réalisation pour un TD de Techniques de l'Image et du Son, cette vidéo est un faux-documentaire, 
-        <br>mettant en scène dans notre propre rôle mes colocataires et moi-même. 
+        <li class="item-d"> <h3><i><ins> Mockumentary // Flingue et bigoudi</i>  (2018 - 2019)</ins></h4>  
+        <p>Exercice de réalisation pour un TD de Techniques de l'Image et du Son à l'UPJV (Amiens),  
+        <br>cette vidéo est un faux-documentaire, mettant en scène dans notre propre rôle mes colocataires et moi-même. 
         <br>Il s'agit de ma première expérience en étant à la fois devant et derrière la caméra.  
         <br><br>Poste occupés : scénario / réalisation / prise de son</p></li>
 
@@ -74,7 +84,7 @@
             <br><br>Protocole : 3 écrivains, 3 machines à écrire, 1 caméra volante
             <br>Les écrivains doivent changer de machine à chaque retour à la ligne. 
             <br> Les écrits en résultant sont découpés ligne par ligne et redisposés aléatoirement 
-            <br> selon la méthode du Cut-Up (Nom Référence). 
+            <br> selon la méthode du Cut-Up (cf : William Burroughs). 
             <br> Le montage, après avoir subit un découpage arbitraire subit le même traitement que les textes.
             <br> L'intégralité de la matière doit être présente à l'image. 
             <br><br> Postes occupés : poésie / cadre / montage</p>
