--- a/avi.html
+++ b/avi.html
@@ -35,7 +35,7 @@
     
     Dans ta fresque tu compileras
     
-    Ce qui n'auras été ni noyé ni brûlé. 
+    Ce qui n'aura été ni noyé ni brûlé. 
 
 
 </pre>
