--- a/pnpp.html
+++ b/pnpp.html
@@ -6,7 +6,7 @@
 
 
 <body>
-    <pre style="font-size:20px;">
+    <pre style="font-size:16px; line-height: 1.4;">
         <h3>                      Les pauvres ne peuvent pas se baigner dans l'eau sale</h3>
         
 
