--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ Je suis actuellement retournée à l'Université et suis en cours de validation 
     LYCEE
 </header>
 <ul class="container-b">
-        <li class="item-c"></li>
+        <li class="item-ami"></li>
         <li class="item-d"><h3><i><ins> L'ami</i>  (2015)</ins></h4>  
             <p> 
                 Tout premier court-métrage, réalisé pour mon bac en 2015. 
